--- a/csit/5sem/cg/2078.html
+++ b/csit/5sem/cg/2078.html
@@ -71,18 +71,17 @@
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
                     <a href="2073.html"><button type="button" class="btn">2073</button></a>
-                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
-                    <a href="2075.html"><button type="button " class="btn">2075</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn ">2078</button></a>
-                    <a href="#"><button type="button " class="btn   paper-year-style ">2079</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2078</button></a>
+                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Web Technology I (CSIT.316)</p>
+                <p>End-Term Examination-2078</p>
+                <p>Graphics and Visula Computing(CSIT.315)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -102,48 +101,44 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why is XML namespace significance?</li>
-                        <li>How many types of heading does an HTML contain?</li>
-                        <li>What is RWD (Responsive Web Page Design)?</li>
-                        <li>What is the Box Model in CSS?</li>
-                        <li>What is DOM? What is the use of document object?</li>
-                        <li>How to create objects in JavaScript?</li>
-                        <li>What is a well formed XML document?</li>
-                        <li>Define web server.</li>
+                       <li>Explain the term frame buffer.</li>
+                       <li>What is Open GL? Explain some basic syntax.</li>
+                       <li>Write short notes on 2D translation.</li>
+                       <li>Write short notes on window and viewport with pictorial representation.</li>
+                       <li>What are the two approaches used in visible surface detection methods?</li>
+                       <li>Explain the ambient light illumination model in short.</li>
+                       <li>What is rendering?</li>
+                       <li>What is ray casting method? Expalin in short.</li>
                         <h5 class="text-center">Group B</h5>
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>How do you use external CSS file in the webpage?</li>
-                        <li>Describe HTTP with its header fields and functions.</li>
-                        <li>Write javascript code to valide mobile number and email address.</li>
-                        <li>Differentiate between DTD and XML schema. Also mention the features of XML.</li>
-                        <li>What is HTML link? Explain different link used in html.</li>
-                        <li>Explain ordered and unorderd list in HTML with its significance.</li>
+                        <li>What are the five routings necessary to initialize a window in OpenGL?</li>
+                        <li>Explain Sutherland-Hodgman poygon clipping with example.</li>
+                        <li>What is depth buffer method? Explain its steps.</li>
+                        <li>Explain phong shading.</li>
+                        <li>What are components of computer graphics? Explain any three computer graphics applicatoin areas.</li>
+
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
-                        <li>What are the advantages of using CSS in Web pages? what are the different types of Selection
-                            in CSS?</li>
-                        <li> Whare the pop-up boxes avaiblae in JavaScript? Illustrate with programming example.</li>
-                        <li>Whare the rules for writting XML? Write an XML schema to describe "address" as an element
-                            and "city, state, street and house-no" as its attributes.</li>
-                        <li>Explain regular expression with their meaning. Develop java script program to solve given
-                            problem. Input two numbers using getElementById and add them and display result using the
-                            alert box.</li>
+                        <li>Explain the mid-point circle drawing algorithm and find the points in the circle for given center at (2,9).</li>
+                        <li>What are homogenous matrix representations for basic geometric transformation? Find the new points of polygon A(2,5), B(7,10) and C(10,2) after moving by 3 units in x direction and 2 units in Y direction.</li>
+                        <li>Explain difference between randon scan and raster scan. Write a program in C to draw a line for given two end point A(1,3) and B(11,3).</li>
+                        <li>Describe the architecture of raster scan display. Also define window, viewport and viewing transformation with example.</li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Fifth Semester</h4>
                 <ol>
-                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
                     <li><a href="../cd/2079.html">Compiler Design</a></li>
                     <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
                     <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
-                    <li><a href="#">Web Technology I</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
