--- a/csit/5sem/cg/2073.html
+++ b/csit/5sem/cg/2073.html
@@ -70,19 +70,18 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2073.html"><button type="button" class="btn">2073</button></a>
-                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
-                    <a href="2075.html"><button type="button " class="btn">2075</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2073</button></a>
+                    <a href="2075.html"><button type="button" class="btn ">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn ">2078</button></a>
-                    <a href="#"><button type="button " class="btn   paper-year-style ">2079</button></a>
+                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
+                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Web Technology I (CSIT.316)</p>
+                <p>End-Term Examination-2073</p>
+                <p>Graphics and Visula Computing(CSIT.315)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -90,60 +89,47 @@
                         <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-end">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.40hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Why is XML namespace significance?</li>
-                        <li>How many types of heading does an HTML contain?</li>
-                        <li>What is RWD (Responsive Web Page Design)?</li>
-                        <li>What is the Box Model in CSS?</li>
-                        <li>What is DOM? What is the use of document object?</li>
-                        <li>How to create objects in JavaScript?</li>
-                        <li>What is a well formed XML document?</li>
-                        <li>Define web server.</li>
-                        <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>How do you use external CSS file in the webpage?</li>
-                        <li>Describe HTTP with its header fields and functions.</li>
-                        <li>Write javascript code to valide mobile number and email address.</li>
-                        <li>Differentiate between DTD and XML schema. Also mention the features of XML.</li>
-                        <li>What is HTML link? Explain different link used in html.</li>
-                        <li>Explain ordered and unorderd list in HTML with its significance.</li>
+                        <li>Wha is computer graphics, explain application area of computer graphics and list out input devices.</li>
+                        <li>What is OpenGL, explain basic syntax of OpenGL and explain display window management using GLUT.</li>
+                        <li>Explain 2D translation and write homogenous matrix equation for translation and find the new points of square A(0,0), B(4,0), C(4,4) and D(0,2) after translating the square by 3 uints in both directions.</li>
+                        <li>Explain area sub division method with figure and write the two approaches used for visible surface detection methods.</li>
+                        <li>What is rendering, explain the terms point light source, distribution ligth source and diffuse reflection.</li>
+                        <li>Write equation of circle and explain the circle drawing mid-point algorithm.</li>
+                        <li>Write a program in C to draw a circle and write any four properties of circle.</li>
+                        <li>What is clipping? Explain the term point clipping, line clipping and find out list from the following figure. <br>
+                        <img src="../../../images/cg8.png" alt="" class="img-fluid">
+                        </li>
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
+                            <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What are the advantages of using CSS in Web pages? what are the different types of Selection
-                            in CSS?</li>
-                        <li> Whare the pop-up boxes avaiblae in JavaScript? Illustrate with programming example.</li>
-                        <li>Whare the rules for writting XML? Write an XML schema to describe "address" as an element
-                            and "city, state, street and house-no" as its attributes.</li>
-                        <li>Explain regular expression with their meaning. Develop java script program to solve given
-                            problem. Input two numbers using getElementById and add them and display result using the
-                            alert box.</li>
+                       <li>Explain CRT operation and explain the Raster Scan, Random Scan (vector Scan), beam penetration method and the shadow-mask method.</li>
+                       <li>WRite equation of line and explain the DDA algorithm and write a program in C to draw a line.</li>
+                       <li>Explain 2D rotation and scaling and write homogenous matrix equation for both rotation and scaling. Find the new points of a triangle A(0,0), B(5,0) and C(2,2) after rotating the triangle by 90 degree.</li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Fifth Semester</h4>
                 <ol>
-                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="#">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
                     <li><a href="../cd/2079.html">Compiler Design</a></li>
                     <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
                     <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
-                    <li><a href="#">Web Technology I</a></li>
+                    <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
