--- a/csit/5sem/cg/2079.html
+++ b/csit/5sem/cg/2079.html
@@ -70,6 +70,10 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
+                    <a href="2073.html"><button type="button" class="btn">2073</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
                     <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
