--- a/csit/5sem/ai/2073.html
+++ b/csit/5sem/ai/2073.html
@@ -70,19 +70,19 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2073.html"><button type="button" class="btn">2073</button></a>
-                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2073</button></a>
+                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Compiler Design (CSIT.313)</p>
+                <p>End-Term Examination-2074</p>
+                <p>Artificial Intelligence (CSIT.312)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -90,67 +90,36 @@
                         <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-end">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.40hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What are the two parts of a compilation? Explain briefly.</li>
-                        <li>Write a regular expression for an identifier.</li>
-                        <li>What are the problems with top down parsing>?</li>
-                        <li>Define Lr(0) items of production A->XYZ.</li>
-                        <li>Draw the DAG for the statement a = (a*b+c)-(a*b+c).</li>
-                        <li>Give the main idea of dead code elimination and constant folding.</li>
-                        <li>What is a sential? What is its usage?</li>
-                        <li> Explain synthesized attribute and inherited attribute with suitable examples.</li>
-                        <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>Write the rule to eliminate left recursion in a grammar. Prepare and eliminate the left recursion for the grammar. 
-                            <br>
-                            S->Aa|b <br>
-                            A-> Ac|Sd|ϵ
+                        <li>Define AI. Explain Turing Test Approach.</li>
+                        <li>Prove that A* search is optimal if h(n) is admissible where h(n) is heuristic function.</li>
+                        <li>What is knowledge representation system? Explain the properties of knowledge representation system.</li>
+                        <li>Difference between the forward and backward chaining.</li>
+                        <li>Define intelligent agent. Explain its types with suitable example.</li>
+                        <li>Explain semantic network. Write its advantages and disadvantages.</li>
+                        <li>KB = {(G∨H) -> (~J ∧ ~K), G} Prove that ~J can be inferred from above KB by using resolution.</li>
+                        <li>Write short notes on <br>
+                            a. Neural network <br>
+                            b. Expert system <br>
                         </li>
-                        <li>Point out why is buffering used in lexical analysis? What are the commonly used buffering methods?</li>
-                        <li>Calculate the first and follow functions for the given grammar <br>
-                            S->A <br>
-                            A->aB|Ad <br>
-                            B->b <br>
-                            C->g 
-                        </li>
-                        <li>What do you mean by three-address code representation? Explain with example.</li>
-                        <li>What is type checking? Discuss static and dynamic checking of types.</li>
-                        <li>Distingiush between synthesized & inherited attributes.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                            <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>Explain in brief about different principle sources of optimization techniques with suitable examples.</li>
-                   <li>Write about the following in detail <br>
-                        <ol type="a">
-                            <li>Left factoring</li>
-                            <li>Dead code optimization</li>
-                            <li>Token and Pattern</li>
-                        </ol>
-                    </li>
-                    <li>a. Consider the following grammar <br>
-                        S->AS|b <br>
-                        A->SA|a <br>
-                        Construct the SLR parse table for the grammar. <br>
-                        b. Show the actions of the praser for the input string "abab".
-                    </li>
-                    <li>a. Write the quadruple, triple, indirect triple for the statement <br>
-                        a= b*-c+b*-c <br>
-                        b. Explain the role of intermediate code generator in compilation process.
-                    </li>
+                        <li>Define Alpha-Beta Pruning. Explain an alpha cutoff in detail.</li>
+                        <li>Explain Hill Climbing search techniques with suitable example. What are the problems that may arise in Hill Climbing searching?</li>
+                        <li>You are given two jugs, a 4-liters gallon one and a 3 liters gallon one. Neither have any measuing markers on it. There is a pump that can be used to fill the jugs with water. How can you get exactly (4,2) meaning that the 4-liters gallon jug contains 4 liters of water and 3-liters gallon jug contains 2-liters of water? Solve this problem with state space representation.</li>
                     </ol>
                 </div>
             </div>
@@ -159,9 +128,9 @@
                 <ol>
                     <li><a href="../cg/2079.html">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
-                    <li><a href="#">Compiler Design</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
                     <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
-                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="#">Artificial Intelligence</a></li>
                     <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
