--- a/csit/5sem/ai/2075.html
+++ b/csit/5sem/ai/2075.html
@@ -72,17 +72,17 @@
                 <div class="col-8">
                     <a href="2073.html"><button type="button" class="btn">2073</button></a>
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Compiler Design (CSIT.313)</p>
+                <p>End-Term Examination-2076</p>
+                <p>Artificial Intelligence (CSIT.312)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -90,67 +90,41 @@
                         <b>Semester:</b> Fifth <br>
                     </div>
                     <div class="col-md-3 text-end">
-                        <b>Full Marks:</b> 100 <br>
-                        <b>Time:</b> 3hrs
+                        <b>Full Marks:</b> 80 <br>
+                        <b>Time:</b> 2.40hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group A</h5>
+                <h5>Group B</h5>
                 <b>
-                    <p>Attempt all questions.(8x3=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
-                    <ol>
-                        <li>What are the two parts of a compilation? Explain briefly.</li>
-                        <li>Write a regular expression for an identifier.</li>
-                        <li>What are the problems with top down parsing>?</li>
-                        <li>Define Lr(0) items of production A->XYZ.</li>
-                        <li>Draw the DAG for the statement a = (a*b+c)-(a*b+c).</li>
-                        <li>Give the main idea of dead code elimination and constant folding.</li>
-                        <li>What is a sential? What is its usage?</li>
-                        <li> Explain synthesized attribute and inherited attribute with suitable examples.</li>
-                        <h5 class="text-center">Group B</h5>
-                        <b>
-                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
-                        </b>
-                        <li>Write the rule to eliminate left recursion in a grammar. Prepare and eliminate the left recursion for the grammar. 
+                    <ol>    
+                        <li>Are you generally optimistic or pessimistic about future of artificial intelligence and its benefits for humanity? Should we be concerned about military and other armed robots?</li>
+                        <li>What is an intelligent agent? Explain different environments that AI can be used.</li>
+                        <li>What do you mean by forward chaining? Why it is required? Compare it with backward chaining.</li>
+                        <li>Differentiate between natural language understanding (NLU) and natural language generating (NLG). Why we have to study natural language processing? Explain it.</li>
+                        <li>Define expert system. Explain the stages of expert system development.</li>
+                        <li>Give bayes rule, explain its uses with an example. Prove that 
                             <br>
-                            S->Aa|b <br>
-                            A-> Ac|Sd|ϵ
+                            (p -> r)  ∧ (q -> r) =  (p ∨ q) -> r
                         </li>
-                        <li>Point out why is buffering used in lexical analysis? What are the commonly used buffering methods?</li>
-                        <li>Calculate the first and follow functions for the given grammar <br>
-                            S->A <br>
-                            A->aB|Ad <br>
-                            B->b <br>
-                            C->g 
-                        </li>
-                        <li>What do you mean by three-address code representation? Explain with example.</li>
-                        <li>What is type checking? Discuss static and dynamic checking of types.</li>
-                        <li>Distingiush between synthesized & inherited attributes.</li>
+                        <li>Explain depth limit search. Prove the theorem: if h(n) is consistent, then the values of f(n) along the path are non-decreasing; where, h(n) is heuristic function and f(n) is estimated total cost of path through n to goal.</li>
+                        <li>Assume A and B are two fuzzy subsets of X. If C = A∪B and D=A∩B then prove: 
+                           <br>
+                            a. D⊂C <br>
+                            b. A⊂C and B ⊂ C <br>
+                            c. D ⊂ A and D ⊂ B <br>
+                           </li>
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any three questions. (Long questions)</p>
+                            <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>Explain in brief about different principle sources of optimization techniques with suitable examples.</li>
-                   <li>Write about the following in detail <br>
-                        <ol type="a">
-                            <li>Left factoring</li>
-                            <li>Dead code optimization</li>
-                            <li>Token and Pattern</li>
-                        </ol>
-                    </li>
-                    <li>a. Consider the following grammar <br>
-                        S->AS|b <br>
-                        A->SA|a <br>
-                        Construct the SLR parse table for the grammar. <br>
-                        b. Show the actions of the praser for the input string "abab".
-                    </li>
-                    <li>a. Write the quadruple, triple, indirect triple for the statement <br>
-                        a= b*-c+b*-c <br>
-                        b. Explain the role of intermediate code generator in compilation process.
-                    </li>
+                        <li>Explain universal instantiation and existential generalization in predicate calculus. Write minimax procedure and illustrate the method with the game of Tic-Tac-Toe.</li>
+                        <li>Why fuzzy logic is useful? Explain the architecture of fuzzy logic. Define the term normal support, core, complement and bounded sum with examples.</li>
+                        <li>Justify that AI cannot exist without searching. Explain in detail about any two types of informed search with practical examples.</li>
                     </ol>
                 </div>
             </div>
@@ -159,9 +133,9 @@
                 <ol>
                     <li><a href="../cg/2079.html">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
-                    <li><a href="#">Compiler Design</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
                     <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
-                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="#">Artificial Intelligence</a></li>
                     <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
