--- a/csit/5sem/ai/2078.html
+++ b/csit/5sem/ai/2078.html
@@ -74,15 +74,15 @@
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2078</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2079</p>
-                <p>Compiler Design (CSIT.313)</p>
+                <p>End-Term Examination-2078</p>
+                <p>Artificial Intelligence (CSIT.312)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -102,55 +102,32 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What are the two parts of a compilation? Explain briefly.</li>
-                        <li>Write a regular expression for an identifier.</li>
-                        <li>What are the problems with top down parsing>?</li>
-                        <li>Define Lr(0) items of production A->XYZ.</li>
-                        <li>Draw the DAG for the statement a = (a*b+c)-(a*b+c).</li>
-                        <li>Give the main idea of dead code elimination and constant folding.</li>
-                        <li>What is a sential? What is its usage?</li>
-                        <li> Explain synthesized attribute and inherited attribute with suitable examples.</li>
+                       <li>What do you mean by forward chaining? Explain it with examples.</li>
+                       <li>Justify that AI cannot exist without searching.</li>
+                       <li>Define machine learning.</li>
+                       <li>Define admissible heuristic and monotonicity.</li>
+                       <li>How can you construct expert system?</li>
+                       <li>Define fuzzy logic.</li>
+                       <li>Prove that (p∧q) -> (p∨Q) is a tautology.</li>
+
                         <h5 class="text-center">Group B</h5>
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
-                        <li>Write the rule to eliminate left recursion in a grammar. Prepare and eliminate the left recursion for the grammar. 
-                            <br>
-                            S->Aa|b <br>
-                            A-> Ac|Sd|ϵ
-                        </li>
-                        <li>Point out why is buffering used in lexical analysis? What are the commonly used buffering methods?</li>
-                        <li>Calculate the first and follow functions for the given grammar <br>
-                            S->A <br>
-                            A->aB|Ad <br>
-                            B->b <br>
-                            C->g 
-                        </li>
-                        <li>What do you mean by three-address code representation? Explain with example.</li>
-                        <li>What is type checking? Discuss static and dynamic checking of types.</li>
-                        <li>Distingiush between synthesized & inherited attributes.</li>
+                         <li>Do you agree "the development of Artificial Intelligence has had some negative effects on the society"? If you agree, list some of them and put your opinion in the support of development of Artificial Intelligence.</li>
+                         <li>What is Turing Test in AI? Criticize the performance of the Turing Test to measure the intelligence of the maching.</li>
+                         <li>DEfine quantifier. Explain different inference rule for quantifier.</li>
+                         <li>Define natural language understanding. Explain different levels of knowledge used in laguage understanding.</li>
+                         <li>What is an intelligent Agent? Explain different environment that AI can be used </li>
+                         <li>How can you convert to conjunctive normal form? Explain all the steps with examples.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any three questions. (Long questions)</p>
                         </b>
-                        <li>Explain in brief about different principle sources of optimization techniques with suitable examples.</li>
-                   <li>Write about the following in detail <br>
-                        <ol type="a">
-                            <li>Left factoring</li>
-                            <li>Dead code optimization</li>
-                            <li>Token and Pattern</li>
-                        </ol>
-                    </li>
-                    <li>a. Consider the following grammar <br>
-                        S->AS|b <br>
-                        A->SA|a <br>
-                        Construct the SLR parse table for the grammar. <br>
-                        b. Show the actions of the praser for the input string "abab".
-                    </li>
-                    <li>a. Write the quadruple, triple, indirect triple for the statement <br>
-                        a= b*-c+b*-c <br>
-                        b. Explain the role of intermediate code generator in compilation process.
-                    </li>
+                        <li>Define Alpha-Beta Pruning? Explain an alpha cutoff and beta cutoff in detail?</li>
+                        <li>Why is fuzzy logic useful? Define the term height, union, intersection, relative complement and bounded sum with examples.</li>
+                        <li>Explain in detail about hill Climbing search and greedy best first search with practical examples.</li>
+                        <li>Define learning. Why is learning frame work required? Explain about explanation based machine learning.</li>
                     </ol>
                 </div>
             </div>
@@ -159,9 +136,9 @@
                 <ol>
                     <li><a href="../cg/2079.html">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
-                    <li><a href="#">Compiler Design</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
                     <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
-                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="#">Artificial Intelligence</a></li>
                     <li><a href="../web/2079.html">Web Technology I</a></li>
                 </ol>
             </div>
