adding displayalert function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
   <!--Custome Style -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Javascript custome -->
+  <script>
+        function displayMessage(){
+          alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thanku For Visiting Our Work.");
+        }
+        displayMessage();
+  </script>
+
 </head>
 
 <body>
