--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Javascript custome -->
   <script>
         function displayMessage(){
-          alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thanku For Visiting Our Work.");
+          alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
         }
         displayMessage();
   </script>
